Sat Feb 14 07:34:01 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/SQL/CUTS-unittest.sql:
        * utils/BMW/assemblies/CUTS.BMW/CUTS/BMW/Database.cs:
        * utils/BMW/website/analysis.aspx.cs:
        * utils/BMW/website/logformats.aspx.cs:
        * utils/BMW/website/unittest.aspx:
        * utils/BMW/website/unittest.aspx.cs:

          . Changed the test suite specification such that test packages
            can not be shared between test suite. Instead, they are
            solely used for grouping related unit tests in a test suite.

          . Cleaned up a LOT of old/stale code.

Sat Feb 14 01:26:44 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/antispam/antispam.mpc:
        * cuts/utils/deployment/unique-deployments.cpp:

          . Updated the deployment generator to work with hypothesis 3.

        * tests/cuts/Exponential_Periodic_Event_Test.cpp:

          . Unit test for the exponential distribution version of the
            periodic event generator.

        * utils/BMW/SQL/CUTS-unittest.sql:

          . Removed notification columns from the cuts.unit_test table.

          . Re-implemented several of the stored proceduces to coincide
            with the new implementation for creating a unit test.

        * utils/BMW/assemblies/CUTS.BMW/CUTS/BMW/Database.cs:

          . Implemented a function for creating a new unit test.

        * utils/BMW/assemblies/CUTS.Data/CUTS.Data.mpc:
        * utils/BMW/assemblies/CUTS.Data/CUTS/Data/UnitTesting/LogFormat.cs:
        * utils/BMW/assemblies/CUTS.Data/CUTS/Data/UnitTesting/LogFormatCollection.cs:
        * utils/BMW/assemblies/CUTS.Data/CUTS/Data/UnitTesting/LogFormatRelation.cs:
        * utils/BMW/assemblies/CUTS.Data/CUTS/Data/UnitTesting/LogFormatRelationCollection.cs:
        * utils/BMW/assemblies/CUTS.Data/CUTS/Data/UnitTesting/LogFormatVariable.cs: