@@ -23,9 +23,6 @@ using System.Web.UI;
 using System.Web.UI.WebControls;
 using System.Web.UI.WebControls.WebParts;
 using System.Web.UI.HtmlControls;
-using MySql.Data.MySqlClient;
-using Actions.UnitTestActions;
-using Actions.LogFormatActions;
 using CUTS.Web.UI;
 using CUTS.Web.UI.UnitTest;
 using CUTS.Data.UnitTesting;
